<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch_ng_tr_nh_t_nh_ch_s_bmi"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:gravity="center"
            android:background="@color/yellow"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/nh_p_t_n"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="263dp"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chi_u_cao"
                android:textSize="25sp"
                android:layout_marginBottom="20sp"/>

            <EditText
                android:id="@+id/txtHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_n_n_ng"
                android:textSize="25sp"
                android:layout_marginBottom="20sp"/>

            <EditText
                android:id="@+id/txtWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <Button
            android:id="@+id/btnCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/t_nh_bmi"
            android:textColor="@color/black"
            app:cornerRadius="4sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:textSize="25sp"
                android:layout_marginBottom="20sp"/>

            <EditText
                android:id="@+id/txtBMI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chu_n_o_n"
                android:textSize="25sp"
                android:layout_marginBottom="20sp"/>

            <EditText
                android:id="@+id/txtChuanD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>